# star-control

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLANS.md  README.md  _tmp_workflow_test.txt  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  full.yml  mcp-windows-arm64.yml
.star-control/: project.toml
apps/star-cli/: Cargo.toml
apps/star-cli/src/: local_commands.rs  main.rs
apps/star-cli/tests/: management_cli_evidence.rs
apps/star-cli/tests/evidence/: management-cli-smoke-v1.json
apps/star-control-ui/: README.md  app.js  index.html  styles.css
apps/star-controller/: Cargo.toml
apps/star-controller/src/: approval_store.rs  authenticode.rs  autostart.rs  concurrency_gate.rs  coordination_store.rs  goal_store.rs  lib.rs  lifecycle.rs  main.rs  manifest_resources.rs  operation_store.rs  policy_profile.rs  process_runtime.rs  registry_runtime.rs  registry_watcher.rs  trust_store.rs  validation_cache.rs  validation_execution.rs  validation_planning.rs
apps/star-controller/src/process_runtime/: win32_launcher.rs
apps/star-controller/tests/: process_runtime.rs  property_fuzz.rs
apps/star-daemon/: Cargo.toml  README.md
apps/star-daemon/src/: lib.rs  main.rs  scheduler.rs
apps/star-daemon/tests/: daemon_app.rs
apps/star-mcp/: Cargo.toml
apps/star-mcp/src/: lib.rs  main.rs
apps/star-mcp/tests/: codex_same_session_evidence.rs  mcp_arm64_native_evidence.rs  mcp_inspector_evidence.rs  performance_evidence.rs  stdio_supervisor.rs
apps/star-mcp/tests/evidence/: codex-same-session-v1.json  mcp-arm64-native-smoke-v1.json  mcp-inspector-v1.json  mcp-performance-v1.json
apps/star-updater/: Cargo.toml  build.rs
apps/star-updater/src/: main.rs
apps/starctl/: README.md
benchmarks/: m1-code-index-x64-reference.json  p53-release-audit-x64-arm64.json
builtin-tools/star-sentinel/: README.md  tool.yaml
catalog/: project-exclusions.toml  projects.toml
catalog/policies/: rust-style.toml
catalog/profiles/: ai_development_validation.toml  api_contract_change.toml  architecture_quality.toml  change_planning.toml  ci_release_deploy.toml  data_config_db_migration.toml  debug_recovery.toml  dependency_upgrade.toml  docs_config_environment.toml  language_platform_migration.toml  performance_build.toml  project_understanding.toml  refactor_codemod.toml  rust_style_auto_fix.toml  security_supply_chain.toml  test_correctness.toml
catalog/tool-packages/: star-control-core.toml
configs/defaults/: router.yaml  star-control.yaml
configs/hooks/: after-compact.yaml  after-plan.yaml  after-review.yaml  after-route.yaml  after-tool.yaml  after-validation.yaml  after-worker.yaml  before-compact.yaml  before-plan.yaml  before-route.yaml  before-tool.yaml  before-worker.yaml  on-blocked.yaml  on-done.yaml  on-failed.yaml
configs/policies/: approval-policy.yaml  (+14 more)
crates/adapters/star-adapter-codex/: Cargo.toml
crates/adapters/star-adapter-codex/src/: lib.rs
crates/adapters/star-adapter-github/: Cargo.toml
crates/adapters/star-adapter-github/src/: lib.rs
crates/adapters/star-adapter-rust-index/: Cargo.toml
crates/adapters/star-adapter-rust-index/examples/: rust_syntax_corpus.rs
crates/adapters/star-adapter-rust-index/src/: lib.rs
crates/adapters/star-adapter-windows/: Cargo.toml
crates/adapters/star-adapter-windows/src/: autostart.rs  lib.rs
crates/adapters/star-ipc/: Cargo.toml
crates/adapters/star-ipc/src/: client.rs  controller_start.rs  dpapi.rs  key_store.rs  lib.rs  process_identity.rs  windows_pipe.rs
crates/adapters/star-ipc/tests/: property_fuzz.rs
crates/control/star-application/: Cargo.toml
crates/control/star-application/src/: lib.rs  profile_catalog.rs  rust_style.rs  rust_style_runtime.rs
crates/control/star-development/: Cargo.toml
crates/control/star-development/src/: compatibility.rs  compatibility_v2.rs  coordination.rs  coordination_v2.rs  lib.rs  maintenance.rs  maintenance_v2.rs  managed_registry.rs  managed_registry_v2.rs  migration.rs  migration_v2.rs
crates/control/star-execution/: Cargo.toml
crates/control/star-execution/src/: lib.rs  rust_style.rs
crates/control/star-planning/: Cargo.toml
crates/control/star-planning/src/: lib.rs
crates/control/star-updater-core/: Cargo.toml  build.rs
crates/control/star-updater-core/src/: integration_restart.rs  lib.rs  process_census.rs  restart.rs
crates/control/star-validation/: Cargo.toml
crates/control/star-validation/src/: lib.rs  permit.rs  planning.rs  process_executor.rs  rules.rs  runner.rs  rust_style.rs
crates/foundation/star-contracts/: Cargo.toml
crates/foundation/star-contracts/src/: canonical.rs  coordination_v2.rs  development.rs  development_effect.rs  development_v2.rs  evidence.rs  evidence_v2.rs  fixed_mcp.rs  ids.rs  index.rs  installation.rs  ipc.rs  lib.rs  maintenance_v2.rs  managed_registry.rs  management.rs  manifest.rs  migration_v2.rs  orchestration.rs  patch_v2.rs  planning.rs  profile.rs  recovery.rs  registry.rs  release_v2.rs  runtime.rs  rust_style.rs  schema.rs  strict_json.rs  trust.rs  validator_guard.rs
crates/foundation/star-contracts/src/evidence/: validation_plan.rs
crates/foundation/star-contracts/tests/: contracts.rs  evidence_contracts.rs  property_fuzz.rs
crates/foundation/star-domain/: Cargo.toml
crates/foundation/star-domain/src/: lib.rs  recovery.rs
crates/infrastructure/star-state/: Cargo.toml
crates/infrastructure/star-state/examples/: m1_cache.rs
crates/infrastructure/star-state/src/: lib.rs
docs/: 00_개요.md  01_아키텍처.md  02_구현로드맵.md  README.md
packaging/: release.toml
scripts/: audit_source_absorption.py  build.ps1  dev.ps1  package.ps1  scaffold_from_design_sources.py  test.ps1  validate.ps1
specs/corpus/rust-style/multicrate/app/: Cargo.toml
specs/corpus/rust-style/multicrate/app/src/: lib.rs  main.rs
tools/: codex-e2e-fixture.ps1  mcp-arm64-smoke.ps1  mcp-inspector-fixture.ps1  mcp-management-cli-fixture.ps1  mcp-performance-fixture.ps1
tools/package-release/: Cargo.toml
tools/package-release/src/: main.rs
(+1353 files in other folders)
