[workspace]
members = [
    "packages/star-control-schema",
    "packages/star-control-state",
    "packages/star-control-provider",
    "packages/star-control-router",
    "packages/star-control-execution",
    "packages/star-control-validation",
    "packages/star-control-daemon",
    "packages/star-control-api",
    "packages/star-control-ui",
    "packages/star-control-security",
    "packages/star-control-observability",
    "packages/star-control-cli",
    "packages/star-sentinel",
]
resolver = "2"
