[workspace]
members = [
    "crates/foundation/star-contracts",
    "crates/adapters/star-ipc",
    "apps/star-mcp",
    "apps/star-cli",
    "apps/star-controller",
    "tools/matrix-check",
    "tools/schema-gen",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
hmac = "0.12.1"
jsonschema = { version = "0.47.0", default-features = false }
rand = "0.9.2"
regex = "1.11.2"
rmcp = { version = "=2.2.0", default-features = false, features = ["client", "macros", "schemars", "server", "transport-io"] }
schemars = { version = "1.0.4", features = ["chrono04"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.7"
ulid = { version = "1.2.1", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }
windows = { version = "0.62.2", features = ["Wdk_System_SystemServices", "Win32_Foundation", "Win32_Globalization", "Win32_NetworkManagement_WindowsFirewall", "Win32_Security", "Win32_Security_Authentication_Identity", "Win32_Security_Authorization", "Win32_Security_Credentials", "Win32_Security_Cryptography", "Win32_Security_Cryptography_Catalog", "Win32_Security_Cryptography_Sip", "Win32_Security_Isolation", "Win32_Security_WinTrust", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_Memory", "Win32_System_Pipes", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_System_WindowsProgramming"] }
