[workspace]
members = [
    "crates/foundation/star-contracts",
    "crates/foundation/star-domain",
    "crates/foundation/star-ports",
    "crates/control/star-project",
    "crates/control/star-validation",
    "crates/control/star-execution",
    "crates/control/star-application",
    "crates/control/star-updater-core",
    "crates/infrastructure/star-state",
    "crates/infrastructure/star-evidence",
    "crates/adapters/star-ipc",
    "crates/adapters/star-adapter-windows",
    "crates/adapters/star-adapter-codex",
    "apps/star-mcp",
    "apps/star-cli",
    "apps/star-controller",
    "apps/star-updater",
    "tools/matrix-check",
    "tools/schema-gen",
    "tools/package-release",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.96"

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
hmac = "0.12.1"
jsonschema = { version = "0.47.0", default-features = false }
rand = "0.9.2"
regex = "1.11.2"
rusqlite = { version = "0.40.1", default-features = false, features = ["backup", "bundled", "limits"] }
rmcp = { version = "=2.2.0", default-features = false, features = ["client", "macros", "schemars", "server", "transport-io"] }
schemars = { version = "1.0.4", features = ["chrono04"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.7"
ulid = { version = "1.2.1", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }
windows = { version = "0.62.2", features = ["Wdk_System_SystemServices", "Win32_Foundation", "Win32_Globalization", "Win32_NetworkManagement_WindowsFirewall", "Win32_Security", "Win32_Security_Authentication_Identity", "Win32_Security_Authorization", "Win32_Security_Credentials", "Win32_Security_Cryptography", "Win32_Security_Cryptography_Catalog", "Win32_Security_Cryptography_Sip", "Win32_Security_Isolation", "Win32_Security_WinTrust", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Diagnostics_ToolHelp", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_Memory", "Win32_System_Pipes", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_UI_WindowsAndMessaging"] }
