[package]
name = "star-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "star-controller"
path = "src/main.rs"

[[bin]]
name = "star-fake-exe"
path = "src/bin/star-fake-exe.rs"

[dependencies]
chrono.workspace = true
regex.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
star-contracts = { path = "../../crates/foundation/star-contracts" }
star-ipc = { path = "../../crates/adapters/star-ipc" }
tokio.workspace = true
thiserror.workspace = true
toml.workspace = true
windows.workspace = true
