[package]
name = "star-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "star-mcp"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
star-contracts = { path = "../../crates/foundation/star-contracts" }
star-ipc = { path = "../../crates/adapters/star-ipc" }
thiserror.workspace = true
tokio.workspace = true
