[package]
name = "star-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "star-updater"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
star-contracts = { path = "../../crates/foundation/star-contracts" }
star-updater-core = { path = "../../crates/control/star-updater-core" }
tokio.workspace = true
