[package]
name = "star-package-release"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "star-package-release"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
star-contracts = { path = "../../crates/foundation/star-contracts" }
star-controller = { path = "../../apps/star-controller" }
