[package]
name = "star-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
star-contracts = { path = "../../foundation/star-contracts" }
subtle.workspace = true
tokio.workspace = true
windows.workspace = true
