[package]
name = "star-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
star-contracts = { path = "../../foundation/star-contracts" }
star-domain = { path = "../../foundation/star-domain" }
star-execution = { path = "../star-execution" }
star-ports = { path = "../../foundation/star-ports" }
star-project = { path = "../star-project" }
star-validation = { path = "../star-validation" }
thiserror.workspace = true

[dev-dependencies]
star-evidence = { path = "../../infrastructure/star-evidence" }
star-state = { path = "../../infrastructure/star-state" }
toml.workspace = true
