[package]
name = "star-development"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
star-contracts = { path = "../../foundation/star-contracts" }
star-domain = { path = "../../foundation/star-domain" }
thiserror.workspace = true
toml.workspace = true
