[package]
name = "star-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
star-contracts = { path = "../../foundation/star-contracts" }
star-domain = { path = "../../foundation/star-domain" }
star-ports = { path = "../../foundation/star-ports" }
thiserror.workspace = true
windows.workspace = true
