[package]
name = "star-planning"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
star-contracts = { path = "../../foundation/star-contracts" }
star-domain = { path = "../../foundation/star-domain" }
