[package]
name = "star-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
star-contracts = { path = "../../foundation/star-contracts" }
star-domain = { path = "../../foundation/star-domain" }
star-project = { path = "../star-project" }
thiserror.workspace = true
