[package]
name = "star-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
regex.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
ulid.workspace = true
zeroize.workspace = true
